fix: update name-container styles in MobileMaster.scss for better alignment and readability

--- a/src/client/src/components/MobileMaster.scss
+++ b/src/client/src/components/MobileMaster.scss
@@ -20,22 +20,25 @@
       height: 360px;
     }
     .name-container {
-      position: relative;
-      top: 45%;
-      left: 12%;
       grid-area: overlap;
+      place-self: center;
       width: fit-content;
       height: fit-content;
       z-index: 2;
+      transform: translateY(15vh);
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
       .name {
-        color: rgb(255, 209, 43);
+        color: rgb(255, 255, 255);
         font-size: 32px;
         margin-bottom: 0;
-        text-shadow: 2px 2px 3px rgb(160, 4, 4);
+        text-shadow: 2px 2px 2px rgb(0, 0, 0);
       }
       .description {
         margin-top: 0;
-        font-size: 22px;
+        font-size: 15px;
         color: white;
         font-weight: 300;
         text-shadow: 1px 1px 2px black;
